--- a/src/Components/MobileHeader/MobileHeader.css
+++ b/src/Components/MobileHeader/MobileHeader.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 8px;
+    padding: 16px 8px;
 }
 
 @media (min-width: 1200px){
