--- a/src/Components/MobileMenu/MobileMenu.css
+++ b/src/Components/MobileMenu/MobileMenu.css
@@ -8,7 +8,7 @@
     padding: 16px;
 
     position:fixed;
-    top: 50px;
+    top: calc(50px + 32px);
     left: 0;
     right: 0;
     z-index: 999;
